--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
 <header>
   <div class="logo"><img src="logokomplett.png" alt="KOMPLETT Logo"></div>
-  <button id="btn-carrinho">🛒<span id="badge">0</span></button>
+
+  <!-- Ícone moderno de carrinho -->
+  <button id="btn-carrinho" title="Abrir Carrinho">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="black" stroke-width="2" viewBox="0 0 24 24" width="28" height="28">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-1.6 8h13.2M9 21a1 1 0 100-2 1 1 0 000 2zm8 0a1 1 0 100-2 1 1 0 000 2z"/>
+    </svg>
+    <span id="badge">0</span>
+  </button>
 </header>
 
 <nav>
@@ -25,6 +32,7 @@
 <main id="produtos"></main>
 
 <div id="carrinho">
+  <button id="fechar-carrinho">✖</button>
   <h2>Carrinho</h2>
   <div id="itens-carrinho"></div>
   <button id="limpar">Limpar Carrinho</button>
@@ -44,5 +52,12 @@
 <footer>© 2025 KOMPLETT - Todos os direitos reservados</footer>
 
 <script src="script.js"></script>
+<script>
+  // Fechar carrinho ao clicar no X
+  document.getElementById('fechar-carrinho').addEventListener('click', () => {
+    document.getElementById('carrinho').classList.remove('active');
+  });
+</script>
+
 </body>
 </html>
