--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <button onclick="filtrarCategoria('camisetas')">Camisetas</button>
   <button onclick="filtrarCategoria('moletom')">Moletom</button>
   <button onclick="filtrarCategoria('acessorios')">Acessórios</button>
+  <button onclick="filtrarCategoria('acessorios')">Eletrônicos</button>
 </nav>
 
 <main id="produtos"></main>
@@ -61,3 +62,4 @@
 
 </body>
 </html>
+
