--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KOMPLETT - Loja Ultra Premium</title>
   <link rel="stylesheet" href="style.css">
@@ -10,7 +11,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="logokomplett.png" alt="KOMPLETT Logo">
+      <img src="logokomplett.png" alt="KOMPLETT Logotipo">
     </div>
     <button id="btn-carrinho" title="Abrir Carrinho">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="black" stroke-width="2" viewBox="0 0 24 24" width="28" height="28">
@@ -52,4 +53,5 @@
     });
   </script>
 </body>
+
 </html>
