--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   </header>
 
   <nav>
-    <input type="text" id="search" placeholder="Buscar produtos...">
+    <div class="search-and-cats">
+      <input type="text" id="search" placeholder="Buscar produtos...">
+      <div id="categories" role="toolbar" aria-label="Categorias"></div>
+    </div>
   </nav>
 
   <main id="produtos"></main>
